Fixed issue with "float" entry meta on firefox

--- a/themes/foodiepro-2.1.8/style.scss
+++ b/themes/foodiepro-2.1.8/style.scss
@@ -3277,7 +3277,8 @@ nav.nav-primary .wrap {
 }
 
 .entry-meta {
-    float: left;
+    display:inline-block;
+    width: 100%;
 }
 
 .entry-meta a {
